nullaway_error_82FC0365-77A2-4D56-B0DD-CDF13D3C97C5.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/handler/RequestMatchResult.java:100: error: [NullAway] dereferenced expression this.pathPattern.matchAndExtract(this.lookupPathContainer) is @Nullable
				this.pathPattern.matchAndExtract(this.lookupPathContainer).getUriVariables() :
				                                                          ^
    (see http://t.uber.com/nullaway )
